--- a/ClientApp/src/app/Forms/Master/account/account-dialog/add-account.component.html
+++ b/ClientApp/src/app/Forms/Master/account/account-dialog/add-account.component.html
@@ -27,7 +27,7 @@
           <div fxFlex="100" fxFlex.gt-sm="28" fxFlex.sm="25">
             <mat-form-field appearance="outline" class="small">
               <mat-label>Opening Bal</mat-label>
-              <input matInput autocomplete="off" placeholder="OpeningBal"  formControlName="OpeningBal" type="number">
+              <input matInput autocomplete="off" placeholder="OpeningBal" formControlName="OpeningBal" type="number">
               <mat-error *ngIf="personalForm.controls.OpeningBal.errors?.required">OpeningBal is required</mat-error>
             </mat-form-field>
             <mat-radio-group formControlName="DrCr">
@@ -158,21 +158,12 @@
       </div>
     </form>
   </mat-tab>
-  <mat-tab label="Tax Details">
-    <form [formGroup]="taxForm" (ngSubmit)="onSubmitTax(taxForm.value)" fxLayout="row wrap" class="user-form">
+  <mat-tab label="Self Share">
+    <form [formGroup]="acSelfShareForm" (ngSubmit)="onSelfShare(acSelfShareForm.value)" fxLayout="row wrap" class="user-form">
       <div class="tab-tax-details-parent tab-party-details-parent">
         <div class="white-block pb-0">
-          <h3><span>Tax Details</span></h3>
-          <div fxFlex="100" fxFlex.gt-sm="15" fxFlex.sm="50">
-            <mat-form-field class="example-full-width" appearance="outline">
-              <mat-label>Tax type</mat-label>
-              <mat-select placeholder="Select Tax" formControlName="taxId">
-                <mat-option *ngFor="let tax of taxList" [value]="tax.id">
-                  {{tax.name}}
-                </mat-option>
-              </mat-select>
-            </mat-form-field>
-          </div>
+          <h3><span>Self Share</span></h3>
+
           <div fxFlex="100" fxFlex.gt-sm="15" fxFlex.sm="50">
             <mat-form-field class="example-full-width" appearance="outline">
               <mat-label>Exchange </mat-label>
@@ -183,13 +174,7 @@
               </mat-select>
             </mat-form-field>
           </div>
-          <div fxFlex="100" fxFlex.gt-sm="15" fxFlex.sm="50">
-            <mat-form-field appearance="outline">
-              <mat-label>Intraday Rate</mat-label>
-              <input matInput autocomplete="off" placeholder="IntraDay" formControlName="intraDayRate" type="number">
-              <mat-error *ngIf="taxForm.controls.intraDayRate.errors?.required">IntraDay is required</mat-error>
-            </mat-form-field>
-          </div>
+
           <div fxFlex="100" fxFlex.gt-sm="14" fxFlex.sm="50">
             <mat-form-field appearance="outline">
               <mat-label>From</mat-label>
@@ -207,43 +192,194 @@
           </div>
           <div fxFlex="100" fxFlex.gt-sm="13" fxFlex.sm="50">
             <mat-form-field class="example-full-width" appearance="outline">
-              <mat-label>InsType</mat-label>
-              <mat-select placeholder="Select InsType" formControlName="insType">
-                <mat-option *ngFor="let exchange of instrumentList" [value]="exchange.id">
-                  {{exchange.name}}
+              <mat-label>Apply On</mat-label>
+              <mat-select placeholder="Select value" formControlName="applyOn">
+                <mat-option *ngFor="let applyOn of applyOnFileShare" [value]="applyOn.id">
+                  {{applyOn.name}}
                 </mat-option>
               </mat-select>
             </mat-form-field>
           </div>
           <div fxFlex="100" fxFlex.gt-sm="14" fxFlex.sm="50">
             <mat-form-field appearance="outline">
-              <mat-label>Delivery Rate</mat-label>
-              <input matInput autocomplete="off" placeholder="DeliveryRate" formControlName="deliveryRate" type="number">
-              <mat-error *ngIf="taxForm.controls.deliveryRate.errors?.required">DeliveryRate is required</mat-error>
+              <mat-label>Rate</mat-label>
+              <input matInput autocomplete="off" placeholder="Rate" formControlName="rate" type="number">
+              <mat-error *ngIf="acSelfShareForm.controls.rate.errors?.required">DeliveryRate is required</mat-error>
             </mat-form-field>
           </div>
+
+          <div fxFlex="100" fxFlex.gt-sm="15" fxFlex.sm="50">
+            <mat-form-field class="example-full-width" appearance="outline">
+              <mat-label>Contra Account </mat-label>
+              <mat-select placeholder="Select Exchange" formControlName="contraId">
+                <mat-option *ngFor="let account of acList" [value]="account.id">
+                  {{account.name}}
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+
+
         </div>
         <div fxFlex="100" class="mt-2 text-center space-between-btns">
           <button mat-raised-button color="warn" type="button" (click)="close()">Cancel</button>
-          <button mat-raised-button color="primary" class="uppercase" [disabled]="!taxForm.valid" type="submit">Save</button>
+          <button mat-raised-button color="primary" class="uppercase" [disabled]="!acSelfShareForm.valid" type="submit">Save</button>
         </div>
       </div>
     </form>
     <div class="col-xl-12 mt-2">
       <ag-grid-angular style=" height: 250px;"
                        class="ag-theme-material"
-                       [rowData]="accountTaxList"
+                       [rowData]="accountSelfShareList"
                        [pagination]="true"
-                         [rowHeight]="31"
+                       [rowHeight]="31"
                        [columnDefs]="columnDefs"
                        [defaultColDef]="agGridOptions.defaultColDef"
-                       (cellClicked)="onGridClick($event)"
+                       (cellClicked)="onSelfShareClick($event)"
                        headerHeight="34">
       </ag-grid-angular>
     </div>
   </mat-tab>
 
+  <mat-tab label="Brokerage">
+    <form [formGroup]="brokerageForm" (ngSubmit)="onBrokerageSave(brokerageForm.value)" fxLayout="row wrap" class="user-form">
+      <div class="tab-tax-details-parent tab-party-details-parent">
+        <div class="white-block pb-0">
+          <h3><span>Brokerage</span></h3>
 
+          <div fxFlex="100" fxFlex.gt-sm="15" fxFlex.sm="50">
+            <mat-form-field class="example-full-width" appearance="outline">
+              <mat-label>Exchange </mat-label>
+              <mat-select placeholder="Select Exchange" formControlName="exchangeId">
+                <mat-option *ngFor="let exchange of exchangeList" [value]="exchange.id">
+                  {{exchange.name}}
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+
+          <div fxFlex="100" fxFlex.gt-sm="15" fxFlex.sm="50">
+            <mat-form-field class="example-full-width" appearance="outline">
+              <mat-label>InstrumentType </mat-label>
+              <mat-select placeholder="Select instrument" formControlName="instrumentType">
+                <mat-option *ngFor="let ins of instrumentList" [value]="ins.id">
+                  {{ins.name}}
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+
+
+          <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
+            <mat-form-field class="example-full-width" appearance="outline">
+              <mat-label>Item</mat-label>
+
+              <mat-select placeholder="Select Item" formControlName="itemId">
+                <!--<input (keyup)="onKey($event.target.value)">-->
+                <mat-option *ngFor="let item of itemList" [value]="item.id">
+                  {{item.name}}
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+
+          <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
+            <mat-form-field class="example-full-width" appearance="outline">
+              <mat-label>ApplyOn</mat-label>
+
+              <mat-select placeholder="Select ApplyOn" formControlName="applyOn">
+                <!--<input (keyup)="onKey($event.target.value)">-->
+                <mat-option *ngFor="let item of brokApplyOn" [value]="item.id">
+                  {{item.name}}
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+          <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
+            <mat-form-field class="example-full-width" appearance="outline">
+              <mat-label>ApplyOnQTY</mat-label>
+
+              <mat-select placeholder="Select ApplyOnQty" formControlName="applyOnQty">
+                <!--<input (keyup)="onKey($event.target.value)">-->
+                <mat-option *ngFor="let item of brokApplyOnQty" [value]="item.id">
+                  {{item.name}}
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+          <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
+            <mat-form-field appearance="outline">
+              <mat-label>DeliveryBrokeRate</mat-label>
+              <input matInput autocomplete="off" placeholder="item Code" formControlName="deliveryBrokRate" type="number">
+              <mat-error *ngIf="brokerageForm.controls.deliveryBrokRate.errors?.required">DeliveryBrokeRate is required</mat-error>
+            </mat-form-field>
+          </div>
+          <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
+            <mat-form-field appearance="outline">
+              <mat-label>IntraDayBrokeRate</mat-label>
+              <input matInput autocomplete="off" placeholder="item Code" formControlName="intradayBrokRate" type="number">
+              <mat-error *ngIf="brokerageForm.controls.intradayBrokRate.errors?.required">IntraDayBrokeRate is required</mat-error>
+            </mat-form-field>
+          </div>
+
+          <div fxFlex="100" fxFlex.gt-sm="14" fxFlex.sm="50">
+            <mat-form-field appearance="outline">
+              <mat-label>From</mat-label>
+              <input matInput [matDatepicker]="brokpicker1" formControlName="fromDt">
+              <mat-datepicker-toggle matSuffix [for]="brokpicker1"></mat-datepicker-toggle>
+              <mat-datepicker #brokpicker1></mat-datepicker>
+            </mat-form-field>
+          </div>
+          <div fxFlex="100" fxFlex.gt-sm="14" fxFlex.sm="50">
+            <mat-form-field appearance="outline">
+              <input matInput [matDatepicker]="brokpicker2" placeholder="To" formControlName="toDt">
+              <mat-datepicker-toggle matSuffix [for]="brokpicker2"></mat-datepicker-toggle>
+              <mat-datepicker #brokpicker2></mat-datepicker>
+            </mat-form-field>
+          </div>
+
+          
+          <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
+            <mat-form-field appearance="outline">
+              <mat-label>Range1</mat-label>
+              <input matInput autocomplete="off" placeholder="Range2" formControlName="rateRange1" type="number">
+              <mat-error *ngIf="brokerageForm.controls.rateRange1.errors?.required">Range1 is required</mat-error>
+            </mat-form-field>
+          </div>
+
+          <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
+            <mat-form-field appearance="outline">
+              <mat-label>Range2</mat-label>
+              <input matInput autocomplete="off" placeholder="Range" formControlName="rateRange2" type="number">
+              <mat-error *ngIf="brokerageForm.controls.rateRange2.errors?.required">Range2 is required</mat-error>
+            </mat-form-field>
+          </div>
+
+          <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50" class="pt-5 pb-5 pl-10">
+            <mat-checkbox formControlName="intradaySingleSideonly">Intradaysingleside</mat-checkbox>
+          </div>
+
+
+        </div>
+        <div fxFlex="100" class="mt-2 text-center space-between-btns">
+          <button mat-raised-button color="warn" type="button" (click)="close()">Cancel</button>
+          <button mat-raised-button color="primary" class="uppercase" [disabled]="!brokerageForm.valid" type="submit">Save</button>
+        </div>
+      </div>
+    </form>
+    <div class="col-xl-12 mt-2">
+      <ag-grid-angular style=" height: 250px;"
+                       class="ag-theme-material"
+                       [rowData]="brokerageList"
+                       [pagination]="true"
+                       [rowHeight]="31"
+                       [columnDefs]="columnDefsBrok"
+                       [defaultColDef]="agGridOptions.defaultColDef"
+                       (cellClicked)="onBrokerageClick($event)"
+                       headerHeight="34">
+      </ag-grid-angular>
+    </div>
+  </mat-tab>
 
 
 
