--- a/ClientApp/src/app/Forms/Master/exchange/add-exchange/add-exchange.component.html
+++ b/ClientApp/src/app/Forms/Master/exchange/add-exchange/add-exchange.component.html
@@ -50,7 +50,7 @@
       <form [formGroup]="exchangeForm" (ngSubmit)="onAccountExchangeSubmit(exchangeForm.value)" fxLayout="row wrap" class="user-form">
         <div class="tab-party-details-parent">
             <div class="white-block pb-0">
-                <h3><span>{{selectedName}} Exchange</span></h3>
+                <h3><span> Exchange</span></h3>
                 <div fxFlex="100" fxFlex.gt-sm="33.33" fxFlex.sm="33.33">
                     <div class="dropdown-wrapper">
                         <mat-form-field class="select-slab-mat" appearance="outline">
