--- a/ClientApp/src/app/Forms/Master/brokerage-setup/add-setup-details/add-setup-details.component.html
+++ b/ClientApp/src/app/Forms/Master/brokerage-setup/add-setup-details/add-setup-details.component.html
@@ -8,48 +8,6 @@
     <div class="white-block pb-5">
         <h3><span>Item</span></h3>
         <div class="tab-party-details-parent">
-            <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
-              <mat-form-field class="example-full-width" appearance="outline">
-                <mat-label>Exchange</mat-label>
-                <mat-select placeholder="Select Tax" formControlName="exchangeId">
-                  <mat-option *ngFor="let exchange of exchangeList" [value]="exchange.id">
-                    {{exchange.name}}
-                  </mat-option>
-                </mat-select>
-              </mat-form-field>
-            </div>
-            <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
-                <mat-form-field class="example-full-width" appearance="outline">
-                  <mat-label>Account</mat-label>
-                  <mat-select placeholder="Select" formControlName="accountId">
-                    <mat-option *ngFor="let option of accountList" [value]="option.id">
-                      {{option.name}}
-                    </mat-option>
-                  </mat-select>
-                </mat-form-field>
-              </div>
-              <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
-                <mat-form-field class="example-full-width" appearance="outline">
-                  <mat-label>Instrument Type</mat-label>
-                  <mat-select placeholder="Select InsType" formControlName="instrumentType">
-                    <mat-option *ngFor="let exchange of instrumentList" [value]="exchange.id">
-                      {{exchange.name}}
-                    </mat-option>
-                  </mat-select>
-                </mat-form-field>
-              </div>
-            <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
-                <mat-form-field class="example-full-width" appearance="outline">
-                  <mat-label>Item</mat-label>
-                
-                  <mat-select placeholder="Select Item" formControlName="itemId">
-                    <!--<input (keyup)="onKey($event.target.value)">-->
-                    <mat-option *ngFor="let item of itemList" [value]="item.id">
-                      {{item.name}}
-                    </mat-option>
-                  </mat-select>
-                </mat-form-field>
-              </div>
               <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
                 <mat-form-field class="example-full-width" appearance="outline">
                   <mat-label>ApplyOn</mat-label>
@@ -88,23 +46,7 @@
                     <mat-error *ngIf="itemForm.controls.intradayBrokRate.errors?.required">IntraDayBrokeRate is required</mat-error>                
                 </mat-form-field> 
             </div>
-            <div fxFlex="100" fxFlex.gt-sm="14" fxFlex.sm="50">
-                <mat-form-field appearance="outline">
-                  <mat-label>From</mat-label>
-                  <input matInput [matDatepicker]="picker1" formControlName="fromDt">
-                  <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
-                  <mat-datepicker #picker1></mat-datepicker>
-                </mat-form-field>
-              </div>
-              <div fxFlex="100" fxFlex.gt-sm="14" fxFlex.sm="50">
-                <mat-form-field appearance="outline">
-                    <mat-label>To</mat-label>
-                  <input matInput [matDatepicker]="picker2" placeholder="To" formControlName="toDt">
-                  <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
-                  <mat-datepicker #picker2></mat-datepicker>
-                </mat-form-field>
-              </div>
-              <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
+              <!-- <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
                 <mat-form-field appearance="outline">
                     <mat-label>Range1</mat-label>
                     <input matInput autocomplete="off" placeholder="Range2" formControlName="rateRange1" type="number">
@@ -118,7 +60,7 @@
                     <input matInput autocomplete="off" placeholder="Range" formControlName="rateRange2" type="number">
                     <mat-error *ngIf="itemForm.controls.rateRange2.errors?.required">Range2 is required</mat-error>                
                 </mat-form-field> 
-            </div>
+            </div> -->
             
             <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50" class="pt-5 pb-5 pl-10">
                 <mat-checkbox formControlName="intradaySingleSideonly">Intradaysingleside</mat-checkbox>
