--- a/ClientApp/src/app/Forms/Master/brokerage-setup/brokerage-setup.component.html
+++ b/ClientApp/src/app/Forms/Master/brokerage-setup/brokerage-setup.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div fxLayout="row" fxLayoutAlign="space-between center" class="mt-2">
+  <div class="mt-2">
     <div class="dropdown-container">
       <div class="dropdown-wrapper">
         <mat-form-field class="select-slab-mat" appearance="outline">
@@ -12,15 +12,12 @@
           </mat-select>
         </mat-form-field>
       </div>
-
       <div class="dropdown-wrapper">
         <mat-form-field class="select-slab-mat" appearance="outline">
-          <mat-label>Select Account</mat-label>
-          
+          <mat-label>Select Account</mat-label>          
           <mat-select #selectAccount [(ngModel)]="accountIds" multiple placeholder="Select Account" panelClass="custom-select-panel">
             <input class="milti-search-box" #multiUserSearch type="text" autocomplete="off" matInput placeholder="Search Account" (input)="onInputAccountListChange($event)"/>
             <mat-option value=-1 (click)="accountAllSelection()">Select All</mat-option>
-
             <mat-option *ngFor="let option of filteredAccountList" [value]="option.id">
               {{ option.name }}
             </mat-option>
@@ -64,20 +61,19 @@
           <mat-datepicker #picker2></mat-datepicker>
         </mat-form-field>
       </div>
-      </div>
-
-      <div>
-        <button mat-raised-button color="accent" (click)="getBrokerageSetupList(null)" [disabled]="!areRequiredValuesSelected()" class="icon-btn ml-15">
-          <mat-icon>search</mat-icon> search
-        </button>
-        <button mat-raised-button color="accent"  [disabled]="!areRequiredValuesSelected()" (click)="openSlabDetailsDialog(null)" class="icon-btn ml-15">
-          <mat-icon>edit</mat-icon> Modify
-        </button>
-        <button mat-raised-button color="accent"  [disabled]="!areRequiredValuesSelected()" (click)="openSlabDetailsDialog(null)" class="icon-btn ml-15">
-          <mat-icon>add</mat-icon> Add Brokerage
-        </button>
-      </div>
     </div>
+    <div>
+      <button mat-raised-button color="primary" (click)="getBrokerageSetupList(null)" [disabled]="!areRequiredValuesSelected()" class="icon-btn">
+        <mat-icon>search</mat-icon> search
+      </button>
+      <button mat-raised-button color="accent" [disabled]="!areRequiredValuesSelected()" (click)="openSlabDetailsDialog(null)" class="icon-btn ml-15">
+        <mat-icon>edit</mat-icon> Modify
+      </button>
+      <button mat-raised-button color="accent" [disabled]="!areRequiredValuesSelected()" (click)="openSlabDetailsDialog(null)" class="icon-btn ml-15">
+        <mat-icon>add</mat-icon> Add Brokerage
+      </button>
+    </div>
+  </div>
     <div class="col-xl-12 mt-2">
       <ag-grid-angular style=" height: 535px;"
                        class="ag-theme-material"
