--- a/ClientApp/src/styles.scss
+++ b/ClientApp/src/styles.scss
@@ -537,11 +537,17 @@ input {
     }
 }
 .dropdown-container {
-    display: flex;
-    align-items: flex-start;
     .dropdown-wrapper {
-      margin-right: 8px; /* Adjust the margin to match the spacing between elements */
+        display: inline-block;
         .mat-form-field {
+            margin-right: 8px;
+            margin-bottom: 10px;
+            .mat-form-field-infix {
+                width: 150px;
+                .mat-select-arrow {
+                    margin-top: 7px;
+                }
+            }
             .mat-form-field-wrapper {
                 margin: 0;
                 padding-bottom: 0;
