--- a/ClientApp/src/app/Forms/Master/brokerage-setup/brokerage-setup.component.html
+++ b/ClientApp/src/app/Forms/Master/brokerage-setup/brokerage-setup.component.html
@@ -66,7 +66,7 @@
       <button mat-raised-button color="primary" (click)="getBrokerageSetupList(null)" [disabled]="!areRequiredValuesSelected()" class="icon-btn">
         <mat-icon>search</mat-icon> search
       </button>
-      <button mat-raised-button color="accent" [disabled]="!areRequiredValuesSelected()" (click)="openSlabDetailsDialog(null)" class="icon-btn ml-15">
+      <button mat-raised-button color="accent" [disabled]="!areRequiredValuesSelected()" (click)="openEditSetupDialog(null)" class="icon-btn ml-15">
         <mat-icon>edit</mat-icon> Modify
       </button>
       <button mat-raised-button color="accent" [disabled]="!areRequiredValuesSelected()" (click)="openSlabDetailsDialog(null)" class="icon-btn ml-15">
