--- a/ClientApp/src/app/Forms/Master/brokerage-setup/brokerage-setup.component.html
+++ b/ClientApp/src/app/Forms/Master/brokerage-setup/brokerage-setup.component.html
@@ -25,6 +25,7 @@
         </mat-form-field>
       </div>
       <div class="dropdown-wrapper">
+        <mat-icon class="info-icon" (click)="viewAllItemGroups(null)">info</mat-icon>
         <mat-form-field class="select-slab-mat" appearance="outline">
           <mat-label>Select Item Group</mat-label>
           <mat-select #select  [(ngModel)]="itemGroupIds" placeholder="Select Item Group" panelClass="custom-select-panel">
@@ -61,24 +62,32 @@
           <mat-datepicker #picker2></mat-datepicker>
         </mat-form-field>
       </div>
+      <div class="dropdown-wrapper text-end">
+        <button mat-raised-button color="primary" (click)="getBrokerageSetupList(null)" [disabled]="!areRequiredValuesSelected()" class="icon-btn">
+          <mat-icon>search</mat-icon> search
+        </button>
+      </div>
     </div>
-    <div>
-      <button *ngIf="itemGroupIds" mat-raised-button color="primary" (click)="viewAllItemGroups(null)" class="icon-btn">
+    <div class="row">
+      <div fxFlex="100" fxFlex.gt-sm="50" fxFlex.sm="50">
+        <button mat-raised-button color="accent" [disabled]="!areRequiredValuesSelected()" (click)="openSlabDetailsDialog('lock')" class="icon-btn">
+          <mat-icon>lock</mat-icon> Lock Brokerage
+        </button>
+        <button mat-raised-button color="accent" [disabled]="!areRequiredValuesSelected()" (click)="openModifySetupDialog(null)" class="icon-btn ml-15">
+          <mat-icon>edit</mat-icon> Modify
+        </button>
+      </div>
+      <div fxFlex="100" fxFlex.gt-sm="50" fxFlex.sm="50" class="text-end">
+        <button mat-raised-button color="accent" [disabled]="!areRequiredValuesSelected()" (click)="openSlabDetailsDialog('add')" class="icon-btn">
+          <mat-icon>add</mat-icon> Add Brokerage
+        </button>
+      </div>
+    </div>
+    <!-- <div>
+      <button *ngIf="itemGroupIds" mat-raised-button color="primary"  class="icon-btn">
         <mat-icon>search</mat-icon> click to view all item
-      </button>
-      <button mat-raised-button color="primary" (click)="getBrokerageSetupList(null)" [disabled]="!areRequiredValuesSelected()" class="icon-btn">
-        <mat-icon>search</mat-icon> search
-      </button>
-      <button mat-raised-button color="accent" [disabled]="!areRequiredValuesSelected()" (click)="openSlabDetailsDialog('lock')" class="icon-btn ml-15">
-        <mat-icon>lock</mat-icon> Loack Brokerage
-      </button>
-      <button mat-raised-button color="accent" [disabled]="!areRequiredValuesSelected()" (click)="openModifySetupDialog(null)" class="icon-btn ml-15">
-        <mat-icon>edit</mat-icon> Modify
-      </button>
-      <button mat-raised-button color="accent" [disabled]="!areRequiredValuesSelected()" (click)="openSlabDetailsDialog('add')" class="icon-btn ml-15">
-        <mat-icon>add</mat-icon> Add Brokerage
-      </button>
-    </div>
+      </button>    
+    </div> -->
   </div>
     <div class="col-xl-12 mt-2">
       <ag-grid-angular style=" height: 535px;"
