--- a/ClientApp/src/app/Forms/Master/brokerage-setup/view-item-group/view-item-group.component.html
+++ b/ClientApp/src/app/Forms/Master/brokerage-setup/view-item-group/view-item-group.component.html
@@ -4,21 +4,15 @@
       <mat-icon>close</mat-icon>
     </span>
 </a>
-<mat-tab-group>
-    <mat-tab label="Item List " (click)="checkTaxSelect()">
         <div class="col-xl-12 mt-2 position-relative">
             <ag-grid-angular style=" height: 240px;"
-                          class="ag-theme-material mt-2"
+                          class="ag-theme-material"
                           [rowData]="itemGroupList"
                           [pagination]="true"
                           [rowHeight]="31"
                           [columnDefs]="columnDefs"
-                          [rowSelection]="'multiple'"
-                          [rowMultiSelectWithClick]="true"
                           [defaultColDef]="agGridOptions.defaultColDef"
                           (gridReady)="onGridReady($event)"
                           headerHeight="34">
             </ag-grid-angular>
         </div>
-    </mat-tab>
-</mat-tab-group>
