--- a/ClientApp/src/app/Forms/Master/brokerage-setup/lock-brokerage/lock-brokerage.component.html
+++ b/ClientApp/src/app/Forms/Master/brokerage-setup/lock-brokerage/lock-brokerage.component.html
@@ -6,7 +6,7 @@
 </a>
 <form [formGroup]="itemForm" (ngSubmit)="onSubmit(itemForm.value)" fxLayout="row wrap" class="user-form">
     <div class="white-block pb-5">
-        <h3><span>Loack Brokerage</span></h3>
+        <h3><span>Loak Brokerage</span></h3>
         <div class="tab-party-details-parent">
             <div class="dropdown-wrapper">
                 <mat-form-field appearance="outline">
